--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -91,3 +91,8 @@
     margin-left: auto;
     margin-right: 10px;
 }
+
+.aat-add-repeatable-row .aat-add-repeatable {
+    margin-left: 30px;
+    margin-top: 10px;
+}
